<resources>
    <string name="app_name">2_Pizzeria</string>
    <string name="txtTitle">Pizzería\nMamma Mia</string>
    <string name="txtUser">Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtLogIn">Iniciar sesión</string>
    <string name="autoFillTitle">title</string>
    <string name="userDescription">Usuario</string>
    <string name="passwordDescription">Contraseña</string>
    <string name="passwordHint">Contraseña</string>
    <string name="userHint">Usuario</string>
    <string name="txtSignUp">Registrarse</string>
    <string name="txtRemember">Recuérdame</string>
    <string name="txtOrder">Hacer un pedido</string>
    <string name="txtConfiguration">Configuración</string>
    <string name="txtWebsite">Visitar página web</string>
    <string name="txtExit">Salir</string>
    <string name="txtTxtLogout">Cerrar sesión</string>
    <string name="txtSettings">Ajustes</string>
    <string name="txtColor">Color de fondo</string>
    <string name="txtBtnColor">Cambiar color de fondo</string>
    <string name="txtDefaultPizzas">Pizzas predeterminadas</string>
    <string name="txtCustomPizzas">Pizzas personalizadas</string>
    <string name="txtReorder">Repetir último pedido</string>
    <string name="txtGoBack">Volver</string>
    <string name="txtCancel">Cancelar</string>
    <string name="txtSelectAPizza">Selecciona una pizza y un tamaño:</string>
    <string name="txtConfirm">Confirmar</string>
    <string name="txtBig">Grande</string>
    <string name="txtMedium">Mediana</string>
    <string name="txtSmall">Pequeña</string>
    <string name="txtSelectPizzaIngredients">Seleccione 3 ingredientes y un tamaño:</string>
    <string name="txtCancelCustomPizza">Cancelar</string>
    <string name="txtConfirmCustomPizza">Confirmar</string>
    <string name="txtOlives">Aceitunas</string>
    <string name="txtSausages">Salchichas</string>
    <string name="txtChicken">Pollo</string>
    <string name="txtPineapple">Piña</string>
    <string name="txtPepperoni">Pepperoni</string>
    <string name="txtCheese">Queso</string>
    <string name="txtIngredientsLbl">Ingredientes:</string>
    <string name="txtSizeLbl">Tamaño:</string>
    <string name="txtPriceLbl">Precio:</string>
    <string name="txtConfirmCustom">Confirmar</string>
    <string name="txtCancelCustom">Cancelar</string>
    <string name="txtBtnShowTicket">Mostrar ticket</string>
    <string name="txtLoadingText">Realizando el pedido...</string>
</resources>