<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomPizzasScreen">

    <RadioGroup
        android:id="@+id/rgSizes"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmCustomPizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectIngredients"
        app:layout_constraintVertical_bias="0.98">

        <RadioButton
            android:id="@+id/rbSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtSmall"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtMedium"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtBig"
            android:textColor="#000000" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imgLogoCustomPizzasScreen"
        android:layout_width="234dp"
        android:layout_height="101dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mamma_mia" />

    <CheckBox
        android:id="@+id/cbCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="selectIngredient"
        android:text="@string/txtCheese"
        app:layout_constraintEnd_toStartOf="@+id/cbPepperoni"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectIngredients" />

    <TextView
        android:id="@+id/txtSelectIngredients"
        android:layout_width="355dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtSelectPizzaIngredients"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoCustomPizzasScreen" />

    <CheckBox
        android:id="@+id/cbPepperoni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="80dp"
        android:onClick="selectIngredient"
        android:text="@string/txtPepperoni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectIngredients" />

    <CheckBox
        android:id="@+id/cbPineapple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="selectIngredient"
        android:text="@string/txtPineapple"
        app:layout_constraintEnd_toStartOf="@+id/cbChicken"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCheese" />

    <CheckBox
        android:id="@+id/cbChicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="112dp"
        android:onClick="selectIngredient"
        android:text="@string/txtChicken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPepperoni" />

    <CheckBox
        android:id="@+id/cbSausages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="selectIngredient"
        android:text="@string/txtSausages"
        app:layout_constraintEnd_toStartOf="@+id/cbOlives"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbPineapple" />

    <Button
        android:id="@+id/btnConfirmCustomPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388dp"
        android:onClick="confirm"
        android:text="@string/txtConfirmCustomPizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectIngredients" />

    <CheckBox
        android:id="@+id/cbOlives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="80dp"
        android:onClick="selectIngredient"
        android:text="@string/txtOlives"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbChicken" />

    <Button
        android:id="@+id/btnCancelCustomPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/txtCancelCustomPizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmCustomPizza"
        app:layout_constraintVertical_bias="0.391" />
</androidx.constraintlayout.widget.ConstraintLayout>