<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DefaultPizzasScreen">

    <ImageView
        android:id="@+id/imgLogoDefaultPizzasScreen"
        android:layout_width="234dp"
        android:layout_height="101dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mamma_mia" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwPizzas"
        android:layout_width="226dp"
        android:layout_height="326dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSizes" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/txtCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rwPizzas" />

    <TextView
        android:id="@+id/txtSelectPizza"
        android:layout_width="312dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtSelectAPizza"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoDefaultPizzasScreen" />

    <RadioGroup
        android:id="@+id/rgSizes"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectPizza">

        <RadioButton
            android:id="@+id/rbSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtSmall"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtMedium"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtBig"
            android:textColor="#000000" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>